# VeloWeather

./: Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
Documentation/: projektbeskrivelse.docx
docs/: obligatorisk_2.md
test/: app.py  main.py
tests/: test_feels_like.py
velo_weather/backend/: llm.py  main.py  weather.py
velo_weather/frontend/: app.py
